Show stats as json on stats page
